# BrainViewer

./: README.md  brainviewer.py  pyproject.toml  sbv  setup.cfg  setup.py  test.py
simplebrainviewer/: __init__.py  core.py
simplebrainviewer/scripts/: sbv.py
