[project]
name = "simplebrainviewer"
description = "A simple brain viewer using matplotlib"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew@wustl.edu" }]
keywords = ["neuroscience", "neuroimaging"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Image Processing",
]
version = "0.3.2"
urls = { github = "https://github.com/vanandrew/Simplebrainviewer" }
dynamic = ["entry-points"]
dependencies = ["nibabel >= 3.2.2", "matplotlib >= 3.5.1"]

[project.optional-dependencies]
dev = [
    "black >= 21.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
