[metadata]
name = simplebrainviewer
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://github.com/vanandrew/SimpleBrainViewer
version = 0.3.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
install_requires =
    nibabel >= 3.2.2
    matplotlib >= 3.5.1

[options.extras_require]
dev =
    black >= 20.8b0
all =
    %(dev)s

[pycodestyle]
ignore = E203, W503, E731
max-line-length = 120
